--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,53 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+input,
+textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-family: 'Courier New', Courier, monospace;
+  box-sizing: border-box;
+  margin-top: 6px;
+  resize: vertical;
+  outline: none;
+}
+
+button {
+  background-color: #ccc;
+  color: #000;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  pointer-events: none;
+  font-family: 'Courier New', Courier, monospace;
+
+  &:enabled {
+    background-color: #333652;
+    color: #fff;
+    cursor: pointer;
+    pointer-events: all;
+  }
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    width: 100%;
+    border: 1px solid #ccc;
+    margin: 12px;
+}
+
+th, td {
+    text-align: center;
+    padding: 16px;
+}
+  
+tr:nth-child(odd) {
+    background-color: #fff;
+}
